eks/risk-management-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: risk-management-server
  namespace: lakeside
  labels:
    app: risk-management-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: risk-management-server
  template:
    metadata:
      labels:
        app: risk-management-server
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
                      - arm64
      containers:
        - env:
            - name: ACTIVEMQ_HOST
              value: policy-management-backend-queue
            - name: ACTIVEMQ_PORT
              value: "61613"
          image: 063725538836.dkr.ecr.eu-central-1.amazonaws.com/risk-management-server:latest
          imagePullPolicy: Always
          name: risk-management-server
          ports:
            - containerPort: 50051
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: risk-management-server
  namespace: lakeside
spec:
  selector:
    app: risk-management-server
  ports:
    - name: "50051"
      port: 50051
      targetPort: 50051
  type: LoadBalancer
