eks/customer-management-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-management-frontend
  namespace: lakeside
  labels:
    app: customer-management-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-management-frontend
  template:
    metadata:
      labels:
        app: customer-management-frontend
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
                      - arm64
      containers:
        - env:
            - name: REACT_APP_CUSTOMER_SELF_SERVICE_BACKEND
              value: http://34.65.192.94:8080
            - name: REACT_APP_CUSTOMER_MANAGEMENT_BACKEND
              value: http://34.65.192.94:8100
          image: 063725538836.dkr.ecr.eu-central-1.amazonaws.com/customer-management-frontend:latest
          imagePullPolicy: Always
          name: customer-management-frontend
          ports:
            - containerPort: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: customer-management-frontend
  namespace: lakeside
spec:
  selector:
    app: customer-management-frontend
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customer-management-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: customer-management-frontend
                port:
                  number: 80
